# ironclad

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deploy.ps1  distortion.html  index.html  install_vst3.ps1  styles.css
images/Ironclad_UI_Implementation_Package/Animations/: ANIMATION_SPEC.md
images/Ironclad_UI_Implementation_Package/Fonts/: TYPOGRAPHY_SPEC.md
images/Ironclad_UI_Implementation_Package/JUCE/: IRONCLAD_JUCE_IMPLEMENTATION_SPEC.md  LayoutConstants.h
images/Ironclad_UI_Implementation_Package/Layout/: README_BLUEPRINT.md  asset_manifest.json  ironclad_layout_actual_source_pixels.json
images/Ironclad_UI_Implementation_Package/Photoshop/: PHOTOSHOP_LAYER_GUIDE.md  PHOTOSHOP_TYPE_SPECS.md
src/: LicenseManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Biquad.h  Chorus.h  Compressor.h  Delay.h  DistortionEngine.h  Flanger.h  GuitarSource.h  Phaser.h  PickupStage.h  PitchTracker.h  Reverb.h  Transformer.h  Waveshaper.h
src/ui/: IroncladUI.h
tools/: package.ps1
